Implementacao da janela cadastro
Criacão da Class DadosBancario e JanelaCliente

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ PrimeiroFx/mvnw
 ContaBancaria/build/classes/.netbeans_automatic_build
 ContaBancaria/build/classes/.netbeans_update_resources
 *.jar
+*.form
