--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,19 @@ ContaBancaria/build/classes/.netbeans_automatic_build
 ContaBancaria/build/classes/.netbeans_update_resources
 *.jar
 *.form
+NetBeansProjects/BookStore/build/classes/.netbeans_automatic_build
+NetBeansProjects/BookStore/build/classes/.netbeans_update_resources
+NetBeansProjects/AlunoTeste/build/classes/.netbeans_automatic_build
+NetBeansProjects/AlunoTeste/build/classes/.netbeans_update_resources
+NetBeansProjects/CarrinhoDemo/build/classes/.netbeans_automatic_build
+NetBeansProjects/CarrinhoDemo/build/classes/.netbeans_update_resources
+NetBeansProjects/ContaBancaria/build/classes/.netbeans_automatic_build
+*.properties
+*.properties
+NetBeansProjects/HorarioTeste/build/classes/.netbeans_automatic_build
+NetBeansProjects/HorarioTeste/build/classes/.netbeans_update_resources
+NetBeansProjects/Investimentos/build/classes/.netbeans_automatic_build
+NetBeansProjects/Investimentos/build/classes/.netbeans_update_resources
+NetBeansProjects/PontoTeste/build/classes/.netbeans_automatic_build
+NetBeansProjects/PontoTeste/build/classes/.netbeans_update_resources
+*.class
