--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ NetBeansProjects/Investimentos/build/classes/.netbeans_update_resources
 NetBeansProjects/PontoTeste/build/classes/.netbeans_automatic_build
 NetBeansProjects/PontoTeste/build/classes/.netbeans_update_resources
 *.class
+NetBeansProjects/SigCloneProject/build/classes/.netbeans_automatic_build
+NetBeansProjects/SigCloneProject/build/classes/.netbeans_update_resources
+NetBeansProjects/TesteWildes/Teste2wildes/build/classes/.netbeans_update_resources
+*.rs
+NetBeansProjects/TesteWildes/Teste2wildes/build/classes/.netbeans_automatic_build
+NetBeansProjects/MetodosStatic/build/classes/.netbeans_update_resources
+NetBeansProjects/MetodosStatic/build/classes/.netbeans_automatic_build
