Atividade de Encapsulamento de Coleções

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ NetBeansProjects/TesteWildes/Teste2wildes/build/classes/.netbeans_update_resourc
 NetBeansProjects/TesteWildes/Teste2wildes/build/classes/.netbeans_automatic_build
 NetBeansProjects/MetodosStatic/build/classes/.netbeans_update_resources
 NetBeansProjects/MetodosStatic/build/classes/.netbeans_automatic_build
+/DateStruct/nbproject/private/
+/DateStruct/build/
+/Principal/nbproject/private/
+/Principal/build/
