--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ NetBeansProjects/MetodosStatic/build/classes/.netbeans_automatic_build
 /DateStruct/build/
 /Principal/nbproject/private/
 /Principal/build/
+ExerciciosAula/build/classes/.netbeans_update_resources
+ExerciciosAula/build/classes/.netbeans_automatic_build
