janela Form atualizada
icon
logo

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,15 @@ NetBeansProjects/MetodosStatic/build/classes/.netbeans_automatic_build
 /Principal/build/
 ExerciciosAula/build/classes/.netbeans_update_resources
 ExerciciosAula/build/classes/.netbeans_automatic_build
+ExerciciosAula/src/lista/img/salve-peq.png
+ExerciciosAula/src/lista/img/salve-.png
+ExerciciosAula/src/lista/img/sala-de-aula-do-google.png
+ExerciciosAula/src/lista/img/caixa-de-selecao.png
+ExerciciosAula/src/lista/img/botao-apagar.png
+ExerciciosAula/src/lista/img/adicionar-lista.png
+ExerciciosAula/build/classes/lista/img/salve-peq.png
+ExerciciosAula/build/classes/lista/img/salve-.png
+ExerciciosAula/build/classes/lista/img/sala-de-aula-do-google.png
+ExerciciosAula/build/classes/lista/img/sala-de-aula.png
+ExerciciosAula/build/classes/lista/img/caixa-de-selecao.png
+ExerciciosAula/build/classes/lista/img/botao-apagar.png
