--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ ExerciciosAula/build/classes/lista/img/sala-de-aula-do-google.png
 ExerciciosAula/build/classes/lista/img/sala-de-aula.png
 ExerciciosAula/build/classes/lista/img/caixa-de-selecao.png
 ExerciciosAula/build/classes/lista/img/botao-apagar.png
+/Crud_java_/nbproject/private/
